--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        My Blog!
+        My blog!
     </head>
     <body>
-        Welcome.
+        Welcome to my blog!
     </body>
 </html>
