--- a/FirstBlog.html
+++ b/FirstBlog.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        My blog links!
+        My first blog!
     </head>
     <body>
-        Links:
+        Welcome!
     </body>
 </html>
