--- a/first_blog.html
+++ b/first_blog.html
@@ -4,6 +4,7 @@
         My first blog!
     </head>
     <body>
-        Welcome :D!
+        Welcome :D!<br>
+        This week I made a blog!
     </body>
 </html>
