--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        My blog links!
+        My blog links!<br>
     </head>
     <body>
-        Links:
+        Links:<br>
+        <a href="first_blog.html">First Blog</a>
+
     </body>
 </html>
