--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        My blog links!<br>
-    </head>
+    <h1>
+        Parker Garrison's Web Dev Blog<br>
+    </h1>
+    <h2>
+    Blog Links:<br>
+    </h2>
     <body>
-        Links:<br>
-        <a href="first_blog.html">First Blog</a>
-
+        
+        <a href="first_blog.html">First Blog: 9/2/2021</a>
     </body>
 </html>
