--- a/first_blog.html
+++ b/first_blog.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        My first blog!
+        <h1>My First Blog!</h1>
     </head>
     <body>
-        Welcome :D!<br>
-        This week I made a blog!
+        
     </body>
 </html>
