--- a/first_blog.html
+++ b/first_blog.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <h1>My First Blog!</h1>
+        <h2>My First Blog!</h2>
     </head>
     <body>
-        
+        <p>
+            This week I read an article explaining modern JavaScript. I have known how to use HTML and CSS but never really had a good grasp on JS. 
+            This article explained to me how HTML and JavaScript can interact with one another to improve the quality (and readability) of a website.
+        </p>
     </body>
+    <footer>
+        <a href="https://medium.com/the-node-js-collection/modern-javascript-explained-for-dinosaurs-f695e9747b70">MY SOURCE FOR THIS BLOG</a>
+        <br><br><br>
+        <img alt="JS Comic" src="https://miro.medium.com/max/875/1*H8PH-HaV43gZyBJz0mJHxA.png"
+            width="500" height="300">
+    </footer>
 </html>
