--- a/first_blog.html
+++ b/first_blog.html
@@ -5,9 +5,41 @@
     </head>
     <body>
         <p>
-            This week I read an article explaining modern JavaScript. I have known how to use HTML and CSS but never really had a good grasp on JS. 
-            This article explained to me how HTML and JavaScript can interact with one another to improve the quality (and readability) of a website.
-        </p>
+            This week I read an article explaining modern JavaScript. I have known how to use HTML and CSS<br>
+             but never really had a good grasp on JS. This article explained to me how HTML and JavaScript <br>
+             can interact with one another to improve the quality (and readability) of a website.<br>
+            I learned that you can include JS scripts in HTML. This is shown in the following code:<br>
+    <b><pre>
+    &lt!-- index.html --&gt
+    &lt!DOCTYPE html&gt
+    &lthtml lang="en"&gt
+    &lthead&gt
+        &ltmeta charset="UTF-8"&gt
+        &lttitle&gtJavaScript Example&lt/title&gt
+        &ltscript src="index.js"&gt&lt/script&gt
+    &lt/head&gt
+    &ltbody&gt
+        &lth1&gtHello from HTML!&lt/h1&gt
+    &gt/body&lt
+    &lt/html&gt
+</pre></b>
+    We can link a JS script with the script keyword in HTML and then call functions from that script's library.<br>
+    It is also interesting that you can use functions from JavaScript in the order they are added to the <br>
+    HTML file. So if I add a JS file before another one, I can call the first scripts methods in the second script.<br><br><br><br>
+
+    The second part of the article that I read was about package managers. Back before managers existed you had to<br>
+    manually type many lines of code to install certain libraries. You would need to manually type all the code on the<br>
+    right just to install one JS library called moment.js:   <br>
+    <img alt="moment.js" src="https://miro.medium.com/max/3000/1*ef7OX37jr--Jc38ZxO97Iw.png"
+            width="450" height="215"><br>
+    Also, everytime a library is updated you would have to search and update it as well as your code . Package<br>
+    managers greatly simplify this process. Package managers essentially auto-update the libraries you use and store them<br>
+    for you locally. The article discusses how easy package managers make updating the libraries you use, however, it also<br>
+    discusses the downsides to using package managers. Mainly, having to search through the manager folders to find each <br>
+    library so that you can add it to your different HTML files.<br><br> 
+    I only covered the first two sections of this article for this first blog, but I plan to continure reading it for future<br>
+    blog posts so that I can continue to increase my knowledge about JavaScript, HTML and how they interact with one another.
+    </p>
     </body>
     <footer>
         <a href="https://medium.com/the-node-js-collection/modern-javascript-explained-for-dinosaurs-f695e9747b70">MY SOURCE FOR THIS BLOG</a>
