--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <h1>
-        Parker Garrison's Web Dev Blog<br>
+        Parker Garrison's Web Dev Blogs<br>
     </h1>
     <h2>
     Blog Links:<br>
