--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <body>
         
       <a href="first_blog.html">First Blog: 9/2/2021</a>
+      <br>  
+      <a href="second_blog.html">Second Blog: 9/9/2021</a>
     </body>
 </html>
