Second Blog Commit 2

--- a/second_blog.html
+++ b/second_blog.html
@@ -5,8 +5,8 @@
     </head>
     <body>
     
-       This week I learned alot about module bundlers for JavaScript. In languages like java and <br>
-        python you can use an import or include statements to inherit code from other files. JavaScript <br>
+       This week I learned alot about module bundlers for JavaScript. In languages like Java and <br>
+        Python you can use an import or include statements to inherit code from other files. JavaScript <br>
         did not come with this functionality because of security reasons. So instead, each time you wanted <br>
         to inherit a file you would need to load each one and share all variables on the global level. This is <br>
         obviously a lot of extra work so programmers started the project called CommonJS which was created to allow <br>
@@ -30,8 +30,8 @@
         This command will look through your file and find all the "require" statements and build them together into <br>
         a single file. Now you can specify the output file in your browser and everything will work as planned!! <br>
         Even though this is mainly a quality of life addition, a module bundler was considered revolutionary for it's <br>
-        time. When you need to use many different JavaScript a module bundler can save you loads of time and allow for <br>
-        easier updates when you change your code! <br>
+        time. When you need to use many different JavaScript methods a module bundler can save you loads of time and allow <br>
+        for easier updates when you change your code! <br>
     </body>
     <footer>
         <a href="https://medium.com/the-node-js-collection/modern-javascript-explained-for-dinosaurs-f695e9747b70">MY SOURCE FOR THIS BLOG</a>
