--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
       <a href="first_blog.html">First Blog: 9/2/2021</a>
       <br>  
       <a href="second_blog.html">Second Blog: 9/9/2021</a>
+      <br>  
+      <a href="third_blog.html">Second Blog: 9/19/2021</a>
     </body>
 </html>
