--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <br>  
       <a href="second_blog.html">Second Blog: 9/9/2021</a>
       <br>  
-      <a href="third_blog.html">Second Blog: 9/19/2021</a>
+      <a href="third_blog.html">Third Blog: 9/19/2021</a>
     </body>
 </html>
