Blog 3 Final Commit 2

--- a/third_blog.html
+++ b/third_blog.html
@@ -28,8 +28,8 @@
         it was quite short. However, I did enjoy reading this section and thought it was worth including <br>
         in my blog. The ability to quickly translate code allows for so much flexibility with development. <br>
         I learned a lot from this article and this has definitely helped me to become more versed in JavaScript <br>
-        development. I think the next thing I will look into will be CSS as it is somethign that I am still not <br>
-        and expert in but I would like to be. <br>
+        development. I think the next thing I will look into will be CSS as it is something that I am still not <br>
+        an expert in but I would like to be. <br>
 
        
     </body>
