--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
       <a href="second_blog.html">Second Blog: 9/9/2021</a>
       <br>  
       <a href="third_blog.html">Third Blog: 9/19/2021</a>
+      <br>  
+      <a href="fourth_blog.html">Fourth Blog: 9/26/2021</a>
+      
     </body>
 </html>
