Image Fix Blog 4

--- a/fourth_blog.html
+++ b/fourth_blog.html
@@ -9,13 +9,13 @@
          against it being one are flawed. The first point the author brings up is that most people often say that HTML is a <br>
          markup language so therefore, it cannot be a programming language. Although most of the time this is true, it is <br>
          not <b>always</b> the case!!</p> <br>
-        <img src= venn.jpg width = 400 height = 300>
+        <img src= venn.JPG width = 400 height = 300>
         <p>There is some overlap like shown in the image above. So, while this doesn't prove that HTML is a programming <br>
         language, is does disprove that commonly used statement. <br><br><br>
         The next common misconception people make about HTML is that because it doesn't have logic it can't be a programming<br>
         language. This is again false because while HTML may not have if statements or loops, it does have some pieces to it<br>
         that can be considered "logic". It has things such as variables and control structures.</p>
-        <img src = code.jpg width = 400 height = 300> <br>
+        <img src = code.JPG width = 400 height = 300> <br>
         <p>This source code shows the details and summary keywords used which turns out actually implement some basic logic. So, <br>
         here we have another common misunderstanding disproved.<br><br><br>
         The last misconception covered is that HTML is not "turing complete" therefore it is not a programming language. <br>
