--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <a href="third_blog.html">Third Blog: 9/19/2021</a>
       <br>  
       <a href="fourth_blog.html">Fourth Blog: 9/26/2021</a>
+      <br>  
+      <a href="final_blog.html">Final Blog: 12/8/2021</a>
       
     </body>
 </html>
